tdf#105009 sw: fix a11y crash when removing drawing object

SwFrame::RemoveDrawObj() calls SwAnchoredObject::ChgAnchorFrame(0)
so the SwAnchoredDrawObj has no anchor frame later when
SwAccessibleMap::InvalidateCursorPosition() asks for the parent.

(regression from 76c549eb01dcb7b5bf28a271ce00e386f3d388ba)

Change-Id: Id55cb5fc41a4e37e863498265d1565e1621d508e
(cherry picked from commit ade1d4c36053c2a7aed959e3dd09ebc1b8430ea8)